@@ -117,6 +117,8 @@
         <ABILITY ID="Spell_CEqAcid" PROFF=0 LEVEL=5 QUALIFYONLY=true />
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
+        <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
+        <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
         <EFFECT ID="Prop_Adjuster" LEVEL=3 PARMS="ATTACK+1 HITPOINTS+4" />
@@ -266,6 +268,8 @@
         <ABILITY ID="Spell_CEqAcid" PROFF=0 LEVEL=5 QUALIFYONLY=true />
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
+        <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
+        <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
         <EFFECT ID="Prop_Adjuster" LEVEL=3 PARMS="ATTACK+1 HITPOINTS+4" />
@@ -406,6 +410,8 @@
         <ABILITY ID="Spell_CEqAcid" PROFF=0 LEVEL=5 QUALIFYONLY=true />
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
+        <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
+        <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
         <EFFECT ID="Prop_Adjuster" LEVEL=3 PARMS="ATTACK+1 HITPOINTS+4" />
@@ -551,6 +557,8 @@
         <ABILITY ID="Spell_CEqAcid" PROFF=0 LEVEL=5 QUALIFYONLY=true />
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
+        <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
+        <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
         <EFFECT ID="Prop_Adjuster" LEVEL=3 PARMS="ATTACK+1 HITPOINTS+4" />
@@ -699,6 +707,8 @@
         <ABILITY ID="Spell_CEqAcid" PROFF=0 LEVEL=5 QUALIFYONLY=true />
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
+        <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
+        <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
         <EFFECT ID="Prop_Adjuster" LEVEL=3 PARMS="ATTACK+1 HITPOINTS+4" />
@@ -873,6 +883,8 @@
         <ABILITY ID="Spell_CEqAcid" PROFF=0 LEVEL=5 QUALIFYONLY=true />
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
+        <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
+        <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
         <EFFECT ID="Prop_Adjuster" LEVEL=3 PARMS="ATTACK+1 HITPOINTS+4" />
@@ -948,6 +960,8 @@
         <ABILITY ID="Spell_CEqAcid" PROFF=0 LEVEL=5 QUALIFYONLY=true />
         <ABILITY ID="Spell_CEqCold" PROFF=0 LEVEL=4 QUALIFYONLY=true />
         <ABILITY ID="Spell_ClanHome" PROFF=100 LEVEL=3 QUALIFYONLY=false />
+        <ABILITY ID="Spell_ClanWard" PROFF=0 LEVEL=5 QUALIFYONLY=true />
+        <ABILITY ID="Spell_ImprovedClanWard" PROFF=0 LEVEL=20 QUALIFYONLY=true />
     </ABILITIES>
     <EFFECTS>
         <EFFECT ID="Prop_Adjuster" LEVEL=3 PARMS="ATTACK+1 HITPOINTS+4" />
