@@ -310,6 +310,30 @@ Example  : cast "clan home"\n\r\
 This spell sends the caster back to the room designated by the casters \
 clan boss as the home room.
 
+SPELL_CLANWARD=SPELL_CLAN_WARD
+SPELL_CLAN_WARD=<ABILITY>\
+Usage    : CAST "CLAN WARD" [RANK]/REVOKE \n\r\
+Example  : cast "clan ward" TREASURER\n\r\
+This spell must be used in a room that is owned by the casters clan.  \
+When cast, it will prevent anyone from entering the room who is a \
+member of the casters clan, but is BELOW the given rank.  The spell \
+effect is permanent until revoked by the same spell. \
+For the given example, that casting would restrict the room to \
+treasurers and above in rank.  This spell only restricts your \
+fellow clan members, and can be sneaked past.  See also Improved Clan Ward.
+
+SPELL_IMPROVEDCLANWARD=SPELL_IMPROVED_CLAN_WARD
+SPELL_IMPROVED_CLAN_WARD=<ABILITY>\
+Usage    : CAST "IMPROVED CLAN WARD" [RANK]/REVOKE \n\r\
+Example  : cast "improved clan ward" TREASURER\n\r\
+This spell must be used in a room that is owned by the casters clan.  \
+When cast, it will prevent anyone from entering the room who is a \
+member of the casters clan, but is BELOW the given rank.  The spell \
+effect is permanent until revoked by the same spell. \
+For the given example, that casting would restrict the room to \
+treasurers and above in rank.  This spell only restricts your \
+fellow clan members, and can NOT be sneaked past.
+
 SPELL_CEQACID=CLANENCHANT_ACID
 SPELL_CLANENCHANT_ACID=<ABILITY>\
 Usage    : CAST "CLANENCHANT ACID" [TARGET NAME] [POWER]\n\r\
